--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,7 @@
 .content {
   width: 100%;
   margin-left: 280px;
+  overflow-x: hidden;
 }
 
 .home {
