--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,6 +1,6 @@
 .projects {
-  padding: 0 25px;
   margin-bottom: 150px;
+  width: 100%;
 
   &__heading {
     font-size: 2.5rem;
@@ -9,6 +9,7 @@
     border-bottom: 2px solid black;
     display: inline;
     color: midnightblue;
+    margin-left: 25px;
   }
 
   &__cards {
