--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -21,6 +21,7 @@
     border-right: 1px solid #dee2e6;
     border-bottom: 1px solid #adb5bd;
     background-color: #fff;
+    width: 100%;
 
     &:hover {
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
